word/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: word-deploy
  namespace: word
spec:
  replicas: 3
  selector:
    matchLabels:
      app: word-deploy
      version: v1
  template:
    metadata:
      labels:
        app: word-deploy
        version: v1
    spec:
#     affinity:
#       nodeAffinity:
#         requiredDuringSchedulingIgnoredDuringExecution:
#           nodeSelectorTerms:
#           - matchExpressions:
#             - key: kubernetes.io/hostname
#               operator: In
#               values:
#               - worker01
      containers:
      - image: wordpress:latest
        name: word-deploy
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - |
                  export RESTORE_ENABLE="false"
          preStop:
            exec:
              command:
                - "/bin/sh"
                - "-c"
                - |
                  export RESTORE_ENABLE="false"
        volumeMounts:
        - mountPath: /var/www/html
          name: wordpress-files
        - mountPath: /var/www/html/wp-config.php
          name: wp-config-volume
          subPath: wp-config.php
      volumes:
      - name: wp-config-volume
        configMap:
          name: word-config
      - name: plugins-volume
        emptyDir: {}
      - name: word-secret-volume
        secret:
          secretName: word-secret
      - name: wordpress-files
        persistentVolumeClaim:
          claimName: wordpress-pvc
      - name: apache-logs
        emptyDir: {}
