word/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: word-ingress
  namespace: word
spec:
  ingressClassName: nginx
  rules:
  - host: word.fo
    http:
      paths:
      - backend:
          service:
            name: word-service
            port:
              number: 80
        path: /
        pathType: Prefix
